Changes made to about

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,8 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <img class="portrait" src="/img/img1.jpeg">
+        <p> This site has been created by utilising data from mapbox.com and weatherstack.com</p>
+        <img class="portrait" src="/img/Ashacharan_image.jpg">
     </div>
 
     {{>footer}}
